--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "concurrently": "^8.2.0",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.7",
+    "graphql": "^16.7.1",
     "graphql-request": "^6.1.0",
     "next": "13.4.7",
     "react": "18.2.0",
